[package]
name = "hotbolt_macro"
version = "0.1.0"
authors = ["Daniel Hrabovcak <thespiritxiii@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
hotbolt_ffi = {path = "../hotbolt_ffi"}
proc-macro2 = "1.0.32"
quote = "1.0.10"

[dependencies.syn]
version = "1.0.81"
features = ["full"]
