[package]
name = "hotbolt-runner"
version = "0.1.0"
authors = ["Daniel Hrabovcak <thespiritxiii@gmail.com>"]
edition = "2018"

[dependencies]
hotbolt_ffi = { path = "../hotbolt_ffi" }
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
env_logger = "0.8.2"
libloading = "0.6.5"
log = "0.4.11"
notify = "=5.0.0-pre.4"
toml = "0.5.7"
bincode = "1.3.1"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]
