[package]
name = "hotbolt-runner"
version = "0.1.0"
authors = ["Daniel Hrabovcak <thespiritxiii@gmail.com>"]
edition = "2018"

[dependencies]
hotbolt_ffi = { path = "../hotbolt_ffi" }
clap = "=3.0.0-beta.5"
env_logger = "0.9.0"
libloading = "0.6.5"
log = "0.4.14"
notify = "=5.0.0-pre.13"
toml = "0.5.7"
bincode = "1.3.1"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dev-dependencies]
# TODO: Do we need full?
tokio = { version = "1.13.0", features = ["full"] }
