[package]
name = "hotbolt-runner"
version = "0.1.0"
authors = ["Daniel Hrabovcak <thespiritxiii@gmail.com>"]
edition = "2018"

[dependencies]
hotbolt_ffi = { path = "../hotbolt_ffi" }
clap = "=3.0.0-beta.5"
env_logger = "0.9.0"
libloading = "0.6.7"
log = "0.4.14"
notify = "=5.0.0-pre.13"
toml = "0.5.8"
bincode = "1.3.3"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies]
tokio = { version = "1.13.0", features = ["test-util", "io-util", "process", "macros"] }
